--- a/bower.json
+++ b/bower.json
@@ -9,10 +9,14 @@
     "es5-shim": "~2.0.8",
     "angular-resource": "1.2.x",
     "angular-cookies": "1.2.x",
-    "angular-sanitize": "1.2.x"
+    "angular-sanitize": "1.2.x",
+    "angular-fire" : "*"
   },
   "devDependencies": {
     "angular-mocks": "1.2.x",
     "angular-scenario": "1.2.x"
+  },
+  "resolutions": {
+    "angular": "1.2.x"
   }
 }
